[package]
name = "dotin"
version = "0.0.1"
edition = "2024"
description = "A simple dotfiles manager inspired by `stow`."

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.4.4", features = ["derive"] }
file_type_enum = "2.0.1"
fs-err = "3.2.2"
fs-tree = { version = "0.7.0", features = ["fs-err"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.24.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
