[package]
name = "dotin"
version = "0.0.1"
edition = "2024"
description = "A simple dotfiles manager inspired by `stow`."

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.4.4", features = ["derive"] }
file_type_enum = "3.0.1"
fs-err = "3.3.0"
fs-tree = { version = "0.8.2" }
indexmap = "2.13.0"
rapidhash = "4.4.1"

[dev-dependencies]
assert_cmd = "2.1.2"
pretty_assertions = "1.4.1"
tempfile = "3.24.0"
fs-err = { version = "3.2.2", features = ["debug"] }

[profile.release]
strip = true
opt-level = "z"
lto = true

[lints.clippy]
todo = "warn"
dbg_macro = "warn"
